--- a/edicion_validacion.html
+++ b/edicion_validacion.html
@@ -4,7 +4,7 @@
     <title>Proceso de acompañamiento coyuntural y automatización de la Encuesta Nacional de Empleo</title>
     <meta charset="utf-8" />
     <meta name="author" content="" />
-    <meta name="date" content="2020-08-25" />
+    <meta name="date" content="2020-08-26" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -72,10 +72,6 @@ background-position: 100% 0%
 
 --
 
-- Todos han instalado paquetes y saben cómo cargarlos en la sesión
-
---
-
 - Todos han trabajado con datos de encuestas de hogares (Stata, SPSS, Python, Excel)
 
 --
@@ -90,8 +86,6 @@ background-position: 100% 0%
 .center[
 ## Si no manejan alguno de estos conceptos, no se preocupen. Haremos lo posible para que nadie quede atrás 
 &lt;img src="imagenes/emoticon.PNG" width="100" /&gt;
-
-
 ]
 
 
@@ -149,6 +143,40 @@ background-position: 100% 0%
 --
 
 ## Es importante limitarnos a este set de herramientas
+
+---
+background-image: url("imagenes/fondo2.PNG")
+background-size: contain;
+background-position: 100% 0%
+
+# Diferencia entre dplyr y R base
+
+Seleccionemos las mujeres mayores de 18 de una base de datos, conservando solo las columnas de sexo y edad
+
+Con `R` base
+
+
+```r
+df &lt;- datos[datos$sexo == 2 &amp; datos$edad &gt; 18, c("sexo", "edad")]
+```
+
+
+--
+
+Con `dplyr`
+
+
+```r
+datos %&gt;% 
+  filter(sexo == 2 &amp; edad &gt; 18) %&gt;% 
+  select(sexo, edad)
+```
+
+
+--
+
+Si cada uno de nosotros elige su propio estilo, la comunicación se hace muy difícil
+
 
 ---
 
@@ -955,6 +983,30 @@ Pasemos a ver qué son las listas
 &lt;img src="imagenes/listas.PNG" width="600" /&gt;
 ]
 
+---
+background-image: url("imagenes/fondo2.PNG")
+background-size: contain;
+background-position: 100% 0%
+
+# Ejercicios para aplicar dplyr
+
+Usando la base de personas y gastos de la VIII EPF:
+
+1. Calculen el gasto promedio de los hogares por división y zona (deben quedar dos filas por cada división)
+2. Calculen la suma del gasto por hogar en la división 1 (debe quedar una observación por hogar)
+3. Unir el gasto calculado de la división 1 con la base de personas
+
+*Nota*: en primera instancia, no se preocupen de los factores de expansión, pero si se animan, es un muy buen ejercicio hacer los cálculos considerando la expansión.
+
+
+Para cumplir con la tarea, deberán usar casi todas las funciones que vimos hoy, en especial: `group_by`,
+`summarise` y `left_join` 
+
+Es posible que algunas partes no sean tan fáciles, pero no se rindan. Sufrir un rato tiene réditos
+
+La próxima semana les mando la solución
+
+
 
 ---
 background-image: url("imagenes/fondo2.PNG")
@@ -1066,7 +1118,7 @@ background-position: 100% 0%
 
 --
 
-Las funcionales (functionals) son funciones que reciben como argumento otra función 
+Las funcionales (functionals) son funciones que reciben como argumento otra función y devuelven un vector
 
 
 
@@ -1110,7 +1162,7 @@ for (i in 1:10) {
 
 Si entienden este código, la mitad del camino está recorrido en nuestro estudio de las funcionales
 
-
+ 
 
 
 
