arreglar algunas fallas en la presentacion

--- a/edicion_validacion.html
+++ b/edicion_validacion.html
@@ -971,19 +971,7 @@ Solo 248 hogares se mantienen en la tabla final
 Sugerencia para *googlear*: "data wrangling dplyr"
 
 ---
-.linea-superior[]
-.linea-inferior[]
 
-.texto_intermedio[
-Pasemos a ver qué son las listas
-
-]
-
-.center[
-&lt;img src="imagenes/listas.PNG" width="600" /&gt;
-]
-
----
 background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
@@ -996,17 +984,31 @@ Usando la base de personas y gastos de la VIII EPF:
 2. Calculen la suma del gasto por hogar en la división 1 (debe quedar una observación por hogar)
 3. Unir el gasto calculado de la división 1 con la base de personas
 
-*Nota*: en primera instancia, no se preocupen de los factores de expansión, pero si se animan, es un muy buen ejercicio hacer los cálculos considerando la expansión.
+--
 
+**Nota**: en primera instancia, no se preocupen de los factores de expansión, pero si se animan, es un muy buen ejercicio hacer los cálculos considerando la expansión.
+
+--
 
 Para cumplir con la tarea, deberán usar casi todas las funciones que vimos hoy, en especial: `group_by`,
 `summarise` y `left_join` 
 
-Es posible que algunas partes no sean tan fáciles, pero no se rindan. Sufrir un rato tiene réditos
+--
 
-La próxima semana les mando la solución
+Es posible que algunas partes no sean tan fáciles, pero no se rindan. Sufrir un rato tiene su recompensa 😄
 
+---
+.linea-superior[]
+.linea-inferior[]
 
+.texto_intermedio[
+Pasemos a ver qué son las listas
+
+]
+
+.center[
+&lt;img src="imagenes/listas.PNG" width="600" /&gt;
+]
 
 ---
 background-image: url("imagenes/fondo2.PNG")
