arreglar algunos problemas con la diapo

--- a/index.html
+++ b/index.html
@@ -1244,6 +1244,51 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
+# Antes de seguir...
+
+
+¿Alguno de ustedes tiene una idea de qué hace este código?
+
+
+```r
+for (i in 1:10) {
+  print(i)
+}
+```
+
+--
+
+El valor de `i` irá tomando valores de 1 al 10
+
+
+--
+
+
+```r
+escritores &lt;- c("hemingway", "orwell", "nona fernandez", "faulkner", "harper lee")
+for (escritor in escritores) {
+  print(paste0(escritor, " escribió varias novelas")) 
+}
+```
+
+```
+## [1] "hemingway escribió varias novelas"
+## [1] "orwell escribió varias novelas"
+## [1] "nona fernandez escribió varias novelas"
+## [1] "faulkner escribió varias novelas"
+## [1] "harper lee escribió varias novelas"
+```
+
+--
+
+Veremos que las funcionales en `R` son simplemente otra manera de implementar la idea de iteración
+
+
+---
+background-image: url("imagenes/fondo2.PNG")
+background-size: contain;
+background-position: 100% 0%
+
 # ¿Por qué usamos funcionales?
 
 *For loops have a bad rap in R because many people believe they are slow, but the real downside of for loops is that they’re very flexible: a loop conveys that you’re iterating, but not what should be done with the results.*
@@ -1267,7 +1312,6 @@ background-position: 100% 0%
 
 # ¿Por qué usamos funcionales?
 
-Queremos evitar código difícil de entender y que esconde errores 
 
 
 ```r
@@ -1287,6 +1331,10 @@ datos
 ## 1 3
 ## 2 4
 ```
+
+--
+
+Queremos evitar código difícil de entender y que esconde errores 
 
 
 ```r
@@ -1333,7 +1381,7 @@ crear_si &lt;- function(df) {
 
 new_data &lt;- map(datos, crear_si)
 ```
---
+
 
  
 
@@ -1342,7 +1390,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Introducción a funcionales con purrr
+# Funcionales con R base
 
 R base ofrece maneras de implementar funcionales:
 
@@ -1374,54 +1422,13 @@ Para usar funcionales en estilo tidyverse contamos con el paquete `purrr`
 
 ]
 
----
-background-image: url("imagenes/fondo2.PNG")
-background-size: contain;
-background-position: 100% 0%
-
-# Introducción a funcionales con purrr
-
-
-¿Alguno de ustedes tiene una idea de qué hace este código?
-
-
-```r
-for (i in 1:10) {
-  print(i)
-}
-```
-
---
-
-El valor de `i` irá tomando valores de 1 al 10
-
-
---
-
-
-```r
-escritores &lt;- c("hemingway", "orwell", "nona fernandez", "faulkner", "harper lee")
-for (escritor in escritores) {
-  print(paste0(escritor, " escribió varias novelas")) 
-}
-```
-
-```
-## [1] "hemingway escribió varias novelas"
-## [1] "orwell escribió varias novelas"
-## [1] "nona fernandez escribió varias novelas"
-## [1] "faulkner escribió varias novelas"
-## [1] "harper lee escribió varias novelas"
-```
-
-
 
 ---
 background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Comprendiendo el "mapeo"
+# ¿Por qué hablamos de mapas?
 
 Mapear es llevar algo de un lugar a otro
 
@@ -1494,7 +1501,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Introducción a funcionales con purrr
+# Calculando promedios con map
 
 Queremos calcular el promedio de varias columnas
 
@@ -1527,7 +1534,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Introducción a funcionales con purrr
+# Variantes de map
 
 En el ejemplo anterior el resultado era una lista genérica.
 
@@ -1561,7 +1568,7 @@ background-image: url("imagenes/fondo2.PNG")
 background-size: contain;
 background-position: 100% 0%
 
-# Introducción a funcionales con purrr
+# Conflictos
 
 Si existe conflicto entre el vector que le pedimos a `map` y los valores de la función evaluada, obtendremos un error
 
